# emp-ir

./: CMakeLists.txt  LICENSE  Makefile  README.md  converter_check.sh  emp-IR120.sh  emp-compile.cpp  emp-interpret.cpp  run_test.sh
cmake/: wiztoolkit-config.cmake
emp-ir/: AB_helper.h  constant.h  constants_only.h  emp-ir.h  emp_arith_backend.h  emp_bool_backend.h  flex_vector.h  ir1-emp-printer.h  ir1-emp-printer.hpp
emp-ir/arithmetic/: exec_helper.h  ir1-emp-arithmetic-printer.h  print_helper.h  prover_helper.h  verifier_helper.h  zk_helper.h
emp-ir/bool/: exec_helper.h  ir1-emp-binary-printer.h  print_helper.h  prover_helper.h  verifier_helper.h  zk_helper.h
example/: fib.rel  fib2.rel  fib3.rel  sha.ins  sha.wit  unbalanced.rel  unbalanced2.rel
example/add4/: add4.rel  add4_anon.rel  add4_check.rel  add4_func.rel
example/add4_or_mul4/: add4_or_mul4.rel  add4_or_mul4_anon.rel  add4_or_mul4_input.rel  add4_or_mul4_input_anon.rel
example/three-bit/: 0.ins  0.wit  1.ins  1.wit  2.ins  3.ins  3.wit  4.ins  4.wit  5.ins  5.wit  6.ins  6.wit  7.ins  7.wit
example/two-bit/: 0.ins  0.wit  1.ins  1.wit  2.ins  2.wit  3.wit
example_arithmetic/: empty.ins  empty.wit  matprod10.ins  matprod10.rel  matprod10.wit  matprod100.ins  matprod100.rel  matprod100.wit  matprod1000.rel  matprod5.ins  matprod5.rel  matprod5.wit  matprod500.rel
example_arithmetic/add4/: add4.rel  add4_anon.rel  add4_check.rel  add4_func.rel  sum0.ins  sum0.wit
example_arithmetic/add4_or_mul4/: add4_or_mul4.rel  add4_or_mul4_anon.rel  add4_or_mul4_input.rel  add4_or_mul4_input_anon.rel  (+3 more)
(+1 files in other folders)
